# fastapi-ecommerce-shop

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
src/: config.py  dependencies.py  main.py
src/api/: auth.py  main.py
src/migrations/: env.py
src/models/: __init__.py  categories.py  catr.py  orders.py  products.py  reviews.py  users.py
src/routers/: __init__.py  categories.py  notes.py  products.py  utils.py
src/routes/: cart.py  categories.py  notes.py  orders.py  products.py  reviews.py  users.py  utils.py
src/schemas/: __init__.py  cart.py  categories.py  orders.py  products.py  reviews.py  users.py
src/services/: __init__.py  database.py  db_depends.py
src/services/database/: factory.py  postgresql.py
src/utils/: misc.py  routes.py
